--- a/gallery.cabal
+++ b/gallery.cabal
@@ -23,10 +23,10 @@ executable gallery
   main-is:             Gallery.hs
   ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , game-pal
+                     , vr-pal
                      , glfw-pal
                      , gl-pal
-                     , game-pal
+                     , vr-pal
                      , gl
                      , linear-extra
                      , mtl
