--- a/stack.yaml
+++ b/stack.yaml
@@ -3,16 +3,11 @@ packages:
 - '.'
 - '../gl-pal'
 - '../glfw-pal'
-- '../game-pal'
+- '../vr-pal'
 - '../hydra-hs'
 - '../oculus-mini'
 - '../halive'
 - '../linear-extra'
 - '../lens-extra'
 - '../openvr-hs'
-extra-deps:
-- GLFW-b-1.4.7.2
-- bindings-GLFW-3.1.1.3
-- inline-c-0.5.5.1
-- inline-c-cpp-0.1.0.0
-resolver: lts-3.0
+resolver: nightly-2015-11-03
