adding text to the world

--- a/gallery.cabal
+++ b/gallery.cabal
@@ -41,6 +41,8 @@ executable gallery
                      , lens
                      , linear
                      , split
+                     , tinyrick
+                     , freetype-gl-mini
 
   default-language:    Haskell2010
 
